--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@polkadot/api": "^9.10.1",
     "@polkadot/keyring": "^10.2.1",
+    "@polkadot/util": "^10.3.1",
     "@polkadot/util-crypto": "^10.2.1",
     "peaq-did-proto-js": "^1.0.0",
+    "ssh2": "^1.11.0",
     "uuid": "^9.0.0"
   }
 }
