--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@peaq-network/sdk": "^0.2.1",
     "@polkadot/api": "^9.10.1",
     "@polkadot/keyring": "^10.2.1",
     "@polkadot/util": "^10.3.1",
