add: initialize project with multiple new files including scripts for address conversion, batch transfers, and DID management

--- a/package.json
+++ b/package.json
@@ -10,13 +10,36 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@peaq-network/sdk": "^0.2.1",
+    "@acala-network/chopsticks": "^0.9.8",
+    "@layerzerolabs/devtools-evm-hardhat": "^1.1.2",
+    "@layerzerolabs/lz-definitions": "^2.3.42",
+    "@layerzerolabs/lz-v2-utilities": "^2.3.42",
+    "@peaq-network/sdk": "^0.7.2",
+    "@peaq-network/types": "^0.5.1",
     "@polkadot/api": "^9.10.1",
     "@polkadot/keyring": "^10.2.1",
     "@polkadot/util": "^10.3.1",
-    "@polkadot/util-crypto": "^10.2.1",
+    "@polkadot/util-crypto": "^10.4.2",
+    "@subsquid/archive-registry": "^3.3.0",
+    "@subsquid/substrate-processor": "^8.2.0",
+    "@subsquid/typeorm-store": "^1.2.6",
+    "@substrate/api-sidecar": "^18.0.0",
+    "@tatumio/tatum": "^4.2.35",
+    "axios": "^1.7.1",
+    "bip39": "^3.1.0",
+    "bn.js": "^5.2.1",
+    "crypto": "^1.0.1",
+    "csv-parser": "^3.0.0",
+    "ethers": "^6.13.2",
+    "hardhat": "^2.22.10",
+    "hdkey": "^2.1.0",
+    "ipfs-http-client": "^60.0.1",
     "peaq-did-proto-js": "^1.0.0",
+    "puppeteer": "^22.8.0",
+    "secp256k1": "^5.0.0",
     "ssh2": "^1.11.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "web3": "^4.9.0",
+    "web3-utils": "^4.3.3"
   }
 }
